--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1{
 }
 
 h2{
-    font-family:'Trebuchet MS';
+    font-family:'Times New Roman', Times, serif
     color: rgb(218, 188, 218);
     font-style: italic bold;
     /* Separate border edits */
