--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1{
 }
 
 h2{
-    font-family:'Times New Roman', Times, serif
+    font-family:'Times New Roman', Times, serif;
     color: rgb(218, 188, 218);
     font-style: italic bold;
     /* Separate border edits */
@@ -24,26 +24,19 @@ h2{
     border-left-style: inset;
     border-width: medium;
     border-color: blue;
-
 }
 
 h3{
     font-family: 'Times New Roman', Times, serif;
     font-style: italic;
     font-weight: bold;
+    font-size: large;
+    text-align: center;
     color:black
     
 }
 
 p{
-    /* margins (top right bottom left) (not relavent?)*/
-    margin: 25px 500px 200px 100px;
-
-    /* padding (top right bottom left)*/
-    padding: 25px 500px 200px 200px;
-
-    /*  */
-
     font-family: verdana;
     font-size: 20px;
 }
