--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 h1{
     color: whitesmoke;
     text-align: center;
+    font-size:42px;
 
     /* Borders */
     background-color: #6a5acd;
@@ -15,7 +16,8 @@ h1{
 
 h2{
     font-family:'Times New Roman', Times, serif;
-    color: rgb(218, 188, 218);
+    font-size:32px;
+    color: rgb(47, 21, 47);
     font-style: italic bold;
     /* Separate border edits */
     border-top-style: groove;
@@ -28,9 +30,9 @@ h2{
 
 h3{
     font-family: 'Times New Roman', Times, serif;
+    font-size:24px;
     font-style: italic;
     font-weight: bold;
-    font-size: large;
     text-align: center;
     color:black;
     
